Ny pathing i .csproj til dll reference

--- a/RestWine/RestWine.csproj
+++ b/RestWine/RestWine.csproj
@@ -13,8 +13,9 @@
 
   <ItemGroup>
     <Reference Include="WineLib">
-      <HintPath>..\..\WineLib\WineLib\bin\Debug\net8.0\WineLib.dll</HintPath>
-    </Reference>
+      <!-- <HintPath>..\..\WineLib\WineLib\bin\Debug\net8.0\WineLib.dll</HintPath> -->
+	  <HintPath>C:\Users\mikkf\source\repos\WineLib\WineLib\bin\Debug\net8.0\WineLib.dll</HintPath>
+	</Reference>
   </ItemGroup>
 
 </Project>
